--- a/Language.html
+++ b/Language.html
@@ -1,4 +1,5 @@
-<div id="language">
+<body>
+	<div id="language">
 	    <ul id="normal" class="dropmenu">
 	      <li><a href="#">日本語</a>
 	        <ul>
@@ -12,3 +13,4 @@
 	      </li>
 	    <ul>
 	  </div><!-- #language -->
+</body>
